--- a/client/src/App.css
+++ b/client/src/App.css
@@ -75,3 +75,49 @@ body, html {
   margin-top: 20px;
   font-weight: 500;
 }
+/* home page css style */
+.home-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background-color: #f0f4f8;
+  text-align: center;
+}
+
+.home-page h2 {
+  color: #333;
+  font-size: 50px;
+  margin-bottom: 30px;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: bold;
+  letter-spacing: 1px;
+}
+.home-page p {
+  color: #333;
+  font-size: 20px;
+  margin-bottom: 30px;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: bold;
+  text-align: center;
+  margin: 30px;
+}
+
+.home-page button {
+  background-color: #bd52eb;
+  color: white;
+  font-family: 'Times New Roman', Times, serif;
+  border: none;
+  padding: 15px 100px;
+  font-size: 18px;
+  font-weight: bold;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.1s;
+}
+
+.home-page button:hover {
+  background-color: #8723ac;
+  transform: translateY(-2px);
+}
